Configure android enviroment for facebook sdk plugin

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">loginApp</string>
+    <string name="facebook_app_id">302244370257103</string>
 </resources>
